# wayvibes

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  devenv.nix  flake.nix
Razer Green (Blackwidow Elite) - Akira/: config.json
cherrymx-blue-pbt/: config.json
cherrymx-brown-abs/: config.json
eg-crystal-purple/: config.json
nix/: default.nix  module.nix
soundpacks/Creams/: config.json
soundpacks/akko_lavender_purples/: config.json
soundpacks/apex pro/: config.json
soundpacks/boxjade/: config.json
soundpacks/cherrymx-black-abs/: config.json
soundpacks/cherrymx-black-pbt/: config.json
soundpacks/cherrymx-blue-abs/: config.json
soundpacks/cherrymx-brown-pbt/: config.json
soundpacks/cherrymx-red-abs/: config.json
soundpacks/cherrymx-red-pbt/: config.json
soundpacks/eg-oreo/: config.json
soundpacks/kalih-box-white/: config.json
src/: audio.cpp  device.cpp  device.h  main.cpp
topre-purple-hybrid-pbt/: config.json
